[gd_scene load_steps=11 format=2]

[ext_resource path="res://test/time_line_audio/timeline.gd" type="Script" id=1]
[ext_resource path="res://asset/sounds/frame2/voice_GioiThieu_frame2.mp3" type="AudioStream" id=2]
[ext_resource path="res://asset/font/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://asset/sprite2D/UI/grabber_highlight.png" type="Texture" id=4]
[ext_resource path="res://asset/sprite2D/UI/grabber_disabled.png" type="Texture" id=5]

[sub_resource type="StyleBoxLine" id=1]
content_margin_left = 13.0
content_margin_right = 8.0
content_margin_top = 6.0
content_margin_bottom = 9.0
color = Color( 0.54902, 0, 0, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 0, 0, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.52549, 0.52549, 0.52549, 1 )
grow_end = -6.0
thickness = 10

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
HSlider/icons/grabber_disabled = ExtResource( 5 )
HSlider/icons/grabber_highlight = ExtResource( 4 )
HSlider/styles/grabber_area = SubResource( 1 )
HSlider/styles/grabber_area_highlight = SubResource( 2 )
HSlider/styles/slider = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Timeline" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = 7.0
margin_right = 250.0
margin_bottom = 33.0
theme = SubResource( 5 )
step = 0.1
value = 100.0
editable = false
scrollable = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Play" type="Button" parent="."]
margin_left = 402.0
margin_top = 202.0
margin_right = 506.0
margin_bottom = 257.0
text = "Play"

[node name="Pause" type="Button" parent="."]
margin_left = 554.0
margin_top = 202.0
margin_right = 658.0
margin_bottom = 257.0
text = "Pause"

[node name="Stop" type="Button" parent="."]
margin_left = 695.0
margin_top = 202.0
margin_right = 799.0
margin_bottom = 257.0
text = "Stop"

[connection signal="drag_ended" from="Timeline" to="." method="_on_Timeline_drag_ended"]
[connection signal="drag_started" from="Timeline" to="." method="_on_Timeline_drag_started"]
[connection signal="focus_exited" from="Timeline" to="." method="_on_Timeline_focus_exited"]
[connection signal="button_up" from="Play" to="." method="_on_Play_button_up"]
[connection signal="button_up" from="Pause" to="." method="_on_Pause_button_up"]
[connection signal="button_up" from="Stop" to="." method="_on_Stop_button_up"]
